added some more data

--- a/index.html
+++ b/index.html
@@ -50,17 +50,45 @@
                 z: 8750,
                 title: "Mt.Gox first hack",
                 project: "Mt.Gox",
+                location: "Japan",
                 typeEventDesc: "security breach: auditor's credentials stolen by a hacker",
                 status: "in progress",
                 link_media: "",
                 link_archive: ""
               },
               {
+                x: new Date('2011-10-05').getTime(),
+                y: 2,
+                z: 25,
+                title: "Bitcoin7 exchange system breached",
+                project: "Bitcoin7",
+                location: "Bulgaria",
+                typeEventDesc: "The exchange's server and other systems on that network were compromised. A total of 5000 BTC were stolen, along with user database. Users were asked to send detailed personal information to the exchange in order to claim repayment of lost funds - an indication of the troublesome beginnings in the industry. There are indications pointing to an exit scam.",
+                status: "unresolved",
+                link_media: "https://siliconangle.com/2011/10/07/bitcoin7-hacked-funds-recovery-requires-sensitive-personal-information/",
+                link_archive: "",
+                link_community: "https://bitcointalk.org/index.php?topic=46982.0"
+              },     
+              {
+                x: new Date('2012-09-05').getTime(),
+                y: 2,
+                z: 250,
+                title: "BitFloor's unencrypted backup compromised",
+                project: "BitFloor",
+                location: "USA",
+                typeEventDesc: "24000 BTC stolen when the hacker got access to an unencrypted backup of the exchange's hot wallet. The owner, Roman Shtylman, communicated about the event publicly. The exchange was a registered Money Service Business with FinCEN. BitFloor lost its bank account on April 17, 2013 and thus cease to operate.",
+                status: "resolved",
+                link_media: "https://bitcoinmagazine.com/articles/bitfloor-hacked-250000-missing-1346821046",
+                link_archive: "",
+                link_community: "https://bitcointalk.org/index.php?topic=105818.0"
+              },                        
+              {
                 x: new Date('2018-06-19').getTime(),
                 y: 1,
                 z: 30000,
                 title: "Bithumb hacked during moving assets into a cold wallet",
                 project: "Bithumb",
+                location: "",
                 typeEventDesc: "security breach in the exchange's hot wallet, including multiple cryptocurrencies",
                 status: "resolved",
                 link_media: "https://cointelegraph.com/news/from-coincheck-to-bithumb-2018-s-largest-security-breaches-so-far",
